# vari

./: Cargo.toml  build.rs
benches/: biggest_variant.rs  minimal.rs
src/: alloc.rs  imp.rs  imp_pin.rs  internals.rs  lib.rs  pin.rs  tests.rs
src/pin/: imp.rs
tests/: biggest_variant.rs  custom_strategy.rs  minimal.rs
