[package]
name = "vari"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = []
nightly = []

[dependencies]

[dev-dependencies]
mockalloc = '0.1'
criterion = "0.3"

[[bench]]
name = "biggest_variant"
harness = false

[[bench]]
name = "minimal"
harness = false